# time-tracking-nvim

./: .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  VERSION_MANAGEMENT.md  build.sh
.github/workflows/: ci.yml  release.yml
integration_tests/: Cargo.toml  README.md  build.rs  run_tests.sh
integration_tests/src/: lib.rs
lua/time-tracking-nvim/: init.lua
plugin/: time-tracking-nvim.vim
src/: lib.rs  preview.rs  utils.rs
